# WaveMCP

./: .gitignore  CHANGELOG.md  README.md  mcp_server.py  pyproject.toml
docs/: benchmark_report.md
src/: __init__.py
src/parsers/: __init__.py  fst_parser.py  vcd_parser.py
src/tools/: __init__.py  conversion_tools.py  float_tools.py  fst_tools.py  vcd_tools.py
src/utils/: __init__.py  float_convert.py  format.py
tests/: gen_test_vcd.py  test_benchmark.py  test_float_convert.py  test_format.py  test_fst_support.py  test_mcp_server.py
